-bug: Correct the display of custom data in data input methods to follow the proper order
-bug: Change the default behavior of ping.php to mark a host as up if either snmp or ping are successful.
-bug: Don't allow graph_export to delete your web site.
-bug: Correct issue where snmp was not returning hex data and some text data.
-feature: Incorporate snmpbulkwalk binary to user interface to speed snmpv2 & snmpv3 walk calls.

0.8.6g
-bug#0000351: Fix zooming capability in Safari.
-bug#0000491: Allow underscore, dash, and forward slash characters through search string validation.
-bug#0000498: Fix issue where editing data input methods damaged portions of the database.
-bug#0000502: Fix Syslog support in unix.
-bug#0000506/#0000517: Properly handle special XML characters when importing/exporting templates.
-bug#0000508: Fix issues where filter functionality would not work in preview mode.
-bug#0000512: Increase script server buffer size for large output.
-bug#0000520: Fix issue where LDAP authentication causes crash/abort.
-bug#0000521: Add graph/data source title mouseover support.
-bug#0000525: Make sure that all files in the Cacti distribution contain an EOF character.
-bug#0000530: Remove 132 character limitation for OID's during polling.
-bug#0000531: Make sure that quote characters in suggested value fields are properly escaped.
-bug#0000535: Fix template export support for PHP 4.4.
-bug#0000536: Fix printing of zoomed graphs where in IE where a white box would appear over the graph.
-bug#0000537: Re-implement functional SNMPv3 support (authNoPriv only)
-bug#0000543: Always allow non-templated graph/data template fields to be blank.
-bug#0000544: See graph tree export contrib below.
-bug#0000547: Fix issue with escaping certain control characters, causing the graph tree to break.
-bug#0000552: Fix typo on the Settings page.
-bug: Fix multiple output support in the script server.